--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "react-router": "^6.11.2",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "sass": "^1.63.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
