--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,17 +2,21 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8080",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
-    "proxy": "http://openapi.foodsafetykorea.go.kr",
+    "framer-motion": "^10.12.17",
     "react": "^18.2.0",
+    "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "react-router": "^6.11.2",
-    "react-router-dom": "^6.11.2",
+    "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
+    "react-simple-chatbot": "^0.6.1",
     "sass": "^1.63.3",
     "tailwindcss": "^3.3.2",
     "web-vitals": "^2.1.4"
